modify files by author wuweiwei

--- a/templateDemo.html
+++ b/templateDemo.html
@@ -62,7 +62,7 @@ body{
 </html>
 
 <script src="js/jquery.js"></script>
-<script src="js/template.js"></script>
+<script src="js/template-min.js"></script>
 <script>
 data = [
         {
@@ -117,7 +117,7 @@ $("#btn_reLoad").click(function(){
     template.repeat({
         repeatId:".app-myapp",
         data:data,
-        count:2
+        count:3
     });
 });
 </script>
