--- a/templateDemo.html
+++ b/templateDemo.html
@@ -49,7 +49,7 @@ body{
             <div class="app-create-text">新增基础服务</div>
         </div>
 	    <!--模板 begin-->  
-	    <div class="app-myapp fl ${bgcolor}">
+	    <div class="app-myapp fl ${bgcolor}" title="${title}">
 	        <div class="app-myapp-shared">${numbers.app.count}</div>
 	        <div class="app-myapp-photo icons"></div>
 	        <div class="app-myapp-caption">${title}</div>
@@ -64,7 +64,7 @@ body{
 </html>
 
 <script src="js/jquery.js"></script>
-<script src="js/template-min.js"></script>
+<script src="js/template.min.js"></script>
 <script>
 /*数据*/
 data = [
