--- a/templateOptions.html
+++ b/templateOptions.html
@@ -37,9 +37,10 @@ body{
 </head>
 <body>
     <div class="optionsBox">
-        <button id="btn_reLoad" class="button-bigBlue">重新加载(自定义处理)</button>
+        <button id="btn_add" class="button-bigBlue">添加数据</button>
         <button id="btn_insert" class="button-bigBlue">插入数据</button>
-        <button id="btn_append" class="button-bigBlue">追加数据</button>
+        <button id="btn_delete" class="button-bigBlue">删除数据</button>
+        <button id="btn_update" class="button-bigBlue">更新数据</button>
     </div>
 
     <div class="desk">
@@ -49,7 +50,7 @@ body{
             <div class="app-create-text">新增基础服务</div>
         </div>
 	    <!--模板 begin-->  
-	    <div class="app-myapp fl ${bgcolor}" title="${title}">
+	    <div class="app-myapp fl ${bgcolor}" title="${title};">
 	        <div class="app-myapp-shared">${numbers.app.count}</div>
 	        <div class="app-myapp-photo icons"></div>
 	        <div class="app-myapp-caption">${title}</div>
@@ -57,8 +58,8 @@ body{
 	            <a target="_blank" href="http://${url}">${url}</a>
 	        </div>
 	    </div>
-	    <!--模板 end-->  
-        <h1 style="float:left;width:100px;height:100px;">this is H1</h1>
+	    <!--模板 end--> 
+        <h1 style="float:left;width:100px;height:100px;">h1</h1>
     </div>
 
 </body>
@@ -67,6 +68,10 @@ body{
 <script src="js/jquery.js"></script>
 <script src="js/template.min.js"></script>
 <script>
+/*
+提示：在开发中最好采用命名空间及对象的方式设计
+*/
+
 /*数据*/
 data = [
         {
@@ -97,60 +102,86 @@ data = [
 
 
 
-template.repeat({
+var modelView = template.repeat({
     repeatElement : $(".app-myapp")[0],
     data : data,
-    count : 3,
+    type : "cover",
     onloadBefore : function(){
         console.log("load before");
     },
     onload : function(){
         console.log("loaded");
     }
+});    
+
+
+
+
+/*以下是按钮绑定的事件*/
+
+/*更新数据*/
+$("#btn_update").click(function(){
+    modelView.update({
+        "numbers.app.count":"300",
+        "title":"我的应用3"
+        },
+        {
+            title:"xxx",
+            url:"WUI",
+            numbers:
+            {
+                app:{count:"00"}
+            }
+        },
+        function(isOK){
+            //isOK=true表示更新成功
+            alert(isOK);
+        }
+    );
 });
 
-
-/*单击按钮载入数据*/
-$("#btn_reLoad").click(function(){
-	template.repeat({
-		type : "cover",
-		repeatElement:$(".app-myapp")[0],
-		data:data,
-		process:function(object){ /*自定义处理过程*/
-			/*
-			object.index=每个的索引
-			object.item=data数组里的每一行
-			功能： 元素 <div class="app-myapp fl ${bgcolor}"> 中的 ${bgcolor}被替换为 odd 或 even
-			*/
-			return  {
-	                    "bgcolor": object.index%2==0?"odd":"even" ,
-	                    "title"  : "<i>"+object.item.title+"</i>" ,
-	                    "numbers.app.count" : object.item.numbers.app.count + "kg"
-	                };
-			/*
-	        return {...}可以自定义页面的字段值
-	        bgcolor,title,numbers.app.count就是页面上的${bgcolor},${title},${numbers.app.count}
-	        */
-		}
-	});  /*end template*/
+/*删除数据*/
+$("#btn_delete").click(function(){
+    modelView.delete({
+        "numbers.app.count":"500",
+        "title":"我的应用2"
+        },
+        function(){
+            alert('删除成功');
+        }
+    );
 });
 
-/*单击按钮插入数据*/
+/*添加数据*/
+$("#btn_add").click(function(){
+    modelView.add({
+            title:"newTitle",
+            url:"www.new.com",
+            numbers:
+            {
+                app:{count:"90"}
+            }
+        },
+        function(){
+            alert('添加成功');
+        }
+    );
+});
+
+/*插入数据*/
 $("#btn_insert").click(function(){
-    template.repeat({
-    	type : "insert",
-        repeatElement:$(".app-myapp")[0],
-        data:data,
-    });
-});
-
-/*单击按钮追加数据*/
-$("#btn_append").click(function(){
-    template.repeat({
-    	type : "append",
-        repeatElement:$(".app-myapp")[0],
-        data:data,
-    });
+    modelView.insert(1,{
+            title:"newTitle",
+            url:"www.new.com",
+            numbers:
+            {
+                app:{count:"90"}
+            }
+        },
+        function(){
+            alert('添加成功');
+        }
+    );
 });
 </script>
 
